--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
     "tailwindcss": "^2.2.16"
   }
 }
